# four_cuts

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
