[project]
name = "summer-party-four-cuts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "imageio>=2.37.3",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "qrcode>=8.2",
]
